--- a/composer.json
+++ b/composer.json
@@ -2,5 +2,13 @@
     "require": {
         "vlucas/phpdotenv": "^3.3",
         "ramsey/uuid": "^3.8"
+    },
+    "require-dev": {
+        "phpunit/phpunit": "^8"
+    },
+    "autoload": {
+        "psr-4": {
+            "": "apps/"
+        }
     }
 }
